do not insert spaces in function definition after void or type with no argument name

BUG:302587

Hint: basically done by Milian to trick me into being able to fix some of my
problems myself later.